{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 1164,
  "lineage": "1cc3364b-0699-eac8-d6b3-fb164ba02e0b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:security-group/sg-060e854e76aa2b185",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-060e854e76aa2b185",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "aws_vpc_s3_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:vpc-endpoint/vpce-054d7122135600aff",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-054d7122135600aff",
            "owner_id": "614137701308",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04f4990382dd622ce"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "data.aws_route_tables.all",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:loadbalancer/app/CloudChaser-demo-alb/ed5552b9a7ae000a",
            "arn_suffix": "app/CloudChaser-demo-alb/ed5552b9a7ae000a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "CloudChaser-demo-alb-403762167.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:loadbalancer/app/CloudChaser-demo-alb/ed5552b9a7ae000a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CloudChaser-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f072db21b74bfbc",
              "sg-0958c486b4dea1cd0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02feccfdb0de9270c"
              },
              {
                "subnet_id": "subnet-08bcee6c8a7695e9e"
              }
            ],
            "subnets": [
              "subnet-02feccfdb0de9270c",
              "subnet-08bcee6c8a7695e9e"
            ],
            "tags": {
              "Name": "CloudChaser-demo-alb"
            },
            "tags_all": {
              "Name": "CloudChaser-demo-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-024735e7212dc8ffe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.aws_alb.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:listener/app/CloudChaser-demo-alb/ed5552b9a7ae000a/4e489bbc3732f5c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:listener/app/CloudChaser-demo-alb/ed5552b9a7ae000a/4e489bbc3732f5c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:loadbalancer/app/CloudChaser-demo-alb/ed5552b9a7ae000a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_alb.aws_lb.this",
            "module.aws_alb.aws_lb_target_group.main",
            "module.aws_alb.aws_security_group.this",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.aws_iam_role.this",
            "module.aws_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.aws_ec2_instance.aws_instance.this",
            "module.aws_ec2_instance.aws_spot_instance_request.this",
            "module.aws_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.aws_ec2_instance.data.aws_partition.current",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_tcp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not found, custom message",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:listener-rule/app/CloudChaser-demo-alb/ed5552b9a7ae000a/4e489bbc3732f5c0/adee88dc45d03f89",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/error"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:listener-rule/app/CloudChaser-demo-alb/ed5552b9a7ae000a/4e489bbc3732f5c0/adee88dc45d03f89",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:listener/app/CloudChaser-demo-alb/ed5552b9a7ae000a/4e489bbc3732f5c0",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_alb.aws_lb.this",
            "module.aws_alb.aws_lb_listener.frontend_http_tcp",
            "module.aws_alb.aws_lb_target_group.main",
            "module.aws_alb.aws_security_group.this",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.aws_iam_role.this",
            "module.aws_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.aws_ec2_instance.aws_instance.this",
            "module.aws_ec2_instance.aws_spot_instance_request.this",
            "module.aws_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.aws_ec2_instance.data.aws_partition.current",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
            "arn_suffix": "targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "true",
            "name": "htg12023032210461571490000000a",
            "name_prefix": "htg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "htg1"
            },
            "tags_all": {
              "Name": "htg1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.aws_iam_role.this",
            "module.aws_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.aws_ec2_instance.aws_instance.this",
            "module.aws_ec2_instance.aws_spot_instance_request.this",
            "module.aws_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.aws_ec2_instance.data.aws_partition.current",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.instance-ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6-2023032210461693840000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
            "target_id": "i-0e508c8dfa65eaac7"
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_alb.aws_lambda_permission.lb",
            "module.aws_alb.aws_lb_target_group.main",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.aws_iam_role.this",
            "module.aws_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.aws_ec2_instance.aws_instance.this",
            "module.aws_ec2_instance.aws_spot_instance_request.this",
            "module.aws_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.aws_ec2_instance.data.aws_partition.current",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ]
        },
        {
          "index_key": "0.instance-ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6-2023032210461709060000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:614137701308:targetgroup/htg12023032210461571490000000a/9c122c9a12acced6",
            "target_id": "i-02d8a786f95ad228a"
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_alb.aws_lambda_permission.lb",
            "module.aws_alb.aws_lb_target_group.main",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.aws_iam_role.this",
            "module.aws_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.aws_ec2_instance.aws_instance.this",
            "module.aws_ec2_instance.aws_spot_instance_request.this",
            "module.aws_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.aws_ec2_instance.data.aws_partition.current",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:security-group/sg-03f072db21b74bfbc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03f072db21b74bfbc",
            "ingress": [],
            "name": "CloudChaser-demo-alb-20230322104541576600000006",
            "name_prefix": "CloudChaser-demo-alb-",
            "owner_id": "614137701308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CloudChaser-demo-alb"
            },
            "tags_all": {
              "Name": "CloudChaser-demo-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_ec2_instance[\"ap-southeast-1a\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-036b8d4a4caa38819",
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:instance/i-0e508c8dfa65eaac7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e508c8dfa65eaac7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudchaser_instance-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-068e34292bd7c32ea",
            "private_dns": "ip-10-0-143-203.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.143.203",
            "public_dns": "ec2-18-143-177-53.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.177.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e8e0dd2a4eb9e0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaa6fd994e5027b5",
            "tags": {
              "Name": "cloudchaser_instance"
            },
            "tags_all": {
              "Name": "cloudchaser_instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "cloudchaser_instance"
            },
            "vpc_security_group_ids": [
              "sg-05370c2de095ff548"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_ec2_instance[\"ap-southeast-1b\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-036b8d4a4caa38819",
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:instance/i-02d8a786f95ad228a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d8a786f95ad228a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudchaser_instance-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4439c965a4e35f9",
            "private_dns": "ip-10-0-147-190.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.147.190",
            "public_dns": "ec2-54-251-130-83.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.130.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063e2cdaedceb7619",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4c609c246515641",
            "tags": {
              "Name": "cloudchaser_instance"
            },
            "tags_all": {
              "Name": "cloudchaser_instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "cloudchaser_instance"
            },
            "vpc_security_group_ids": [
              "sg-05370c2de095ff548"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.aws_ec2_keypair",
            "data.aws_ami.amazon_linux",
            "module.aws_ec2_instance.aws_iam_instance_profile.this",
            "module.aws_ec2_instance.data.aws_ssm_parameter.this",
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.rs_keypair"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_sg_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:security-group/sg-05370c2de095ff548",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-05370c2de095ff548",
            "ingress": [],
            "name": "CloudChaser-demo-sg-instance-20230322104541280800000003",
            "name_prefix": "CloudChaser-demo-sg-instance-",
            "owner_id": "614137701308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CloudChaser-demo-sg-instance"
            },
            "tags_all": {
              "Name": "CloudChaser-demo-sg-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_sg_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1838143024",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05370c2de095ff548",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_sg_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from load balancer",
            "from_port": 80,
            "id": "sgrule-1474553964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05370c2de095ff548",
            "security_group_rule_id": "sgr-0737b766f78a8ba7d",
            "self": false,
            "source_security_group_id": "sg-0958c486b4dea1cd0",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPs from load balancer",
            "from_port": 443,
            "id": "sgrule-2894379930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05370c2de095ff548",
            "security_group_rule_id": "sgr-0aa89230ce507a1fe",
            "self": false,
            "source_security_group_id": "sg-0958c486b4dea1cd0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ICMP from load balancer",
            "from_port": -1,
            "id": "sgrule-1618075110",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-05370c2de095ff548",
            "security_group_rule_id": "sgr-05a72448a26747d02",
            "self": false,
            "source_security_group_id": "sg-0958c486b4dea1cd0",
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_sg_loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:security-group/sg-0958c486b4dea1cd0",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0958c486b4dea1cd0",
            "ingress": [],
            "name": "CloudChaser-demo-sg-loadbalancer-20230322104541576700000007",
            "name_prefix": "CloudChaser-demo-sg-loadbalancer-",
            "owner_id": "614137701308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CloudChaser-demo-sg-loadbalancer"
            },
            "tags_all": {
              "Name": "CloudChaser-demo-sg-loadbalancer"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_sg_loadbalancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1395629619",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0958c486b4dea1cd0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_sg_loadbalancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-503533112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0958c486b4dea1cd0",
            "security_group_rule_id": "sgr-0d942d57852da68b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-551070877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0958c486b4dea1cd0",
            "security_group_rule_id": "sgr-0850e0b1bcb200dab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-4239493976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0958c486b4dea1cd0",
            "security_group_rule_id": "sgr-03059d6870780eb42",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_loadbalancer.aws_security_group.this",
            "module.aws_sg_loadbalancer.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:security-group/sg-0221cb57bb702353b",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0221cb57bb702353b",
            "ingress": [],
            "name": "CloudChaser-demo-sg-rds-20230322104541566400000005",
            "name_prefix": "CloudChaser-demo-sg-rds-",
            "owner_id": "614137701308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CloudChaser-demo-sg-rds"
            },
            "tags_all": {
              "Name": "CloudChaser-demo-sg-rds"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_sg_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-2463846638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0221cb57bb702353b",
            "security_group_rule_id": "sgr-061ffea9e2eb645d1",
            "self": false,
            "source_security_group_id": "sg-05370c2de095ff548",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_sg_instance.aws_security_group.this",
            "module.aws_sg_instance.aws_security_group.this_name_prefix",
            "module.aws_sg_rds.aws_security_group.this",
            "module.aws_sg_rds.aws_security_group.this_name_prefix",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:internet-gateway/igw-0a6e78e3f0e9359cb",
            "id": "igw-0a6e78e3f0e9359cb",
            "owner_id": "614137701308",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6e78e3f0e9359cb",
            "id": "r-rtb-00900d2dde5e11b2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00900d2dde5e11b2f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:route-table/rtb-092dfa484d28ad46c",
            "id": "rtb-092dfa484d28ad46c",
            "owner_id": "614137701308",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:route-table/rtb-09999fe1bc228e3d7",
            "id": "rtb-09999fe1bc228e3d7",
            "owner_id": "614137701308",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:route-table/rtb-00900d2dde5e11b2f",
            "id": "rtb-00900d2dde5e11b2f",
            "owner_id": "614137701308",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07edd4daa4701b9a3",
            "route_table_id": "rtb-092dfa484d28ad46c",
            "subnet_id": "subnet-01d71e28f92a6f4b7"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.database",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.database",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d5c3ed1a4610ff8",
            "route_table_id": "rtb-09999fe1bc228e3d7",
            "subnet_id": "subnet-078c92b3b7b72ca35"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.database",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.database",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a218274f11e087b",
            "route_table_id": "rtb-092dfa484d28ad46c",
            "subnet_id": "subnet-0aaa6fd994e5027b5"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecfec83f29bba9eb",
            "route_table_id": "rtb-09999fe1bc228e3d7",
            "subnet_id": "subnet-0e4c609c246515641"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b61ec8ea3a78fe",
            "route_table_id": "rtb-00900d2dde5e11b2f",
            "subnet_id": "subnet-02feccfdb0de9270c"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027600fc5016be593",
            "route_table_id": "rtb-00900d2dde5e11b2f",
            "subnet_id": "subnet-08bcee6c8a7695e9e"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-01d71e28f92a6f4b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d71e28f92a6f4b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-db-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-db-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-078c92b3b7b72ca35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078c92b3b7b72ca35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-db-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-db-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-0aaa6fd994e5027b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaa6fd994e5027b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-0e4c609c246515641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4c609c246515641",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-02feccfdb0de9270c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02feccfdb0de9270c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:subnet/subnet-08bcee6c8a7695e9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bcee6c8a7695e9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614137701308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024735e7212dc8ffe"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:614137701308:vpc/vpc-024735e7212dc8ffe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcf080f0f85a93ac",
            "default_route_table_id": "rtb-04f4990382dd622ce",
            "default_security_group_id": "sg-060e854e76aa2b185",
            "dhcp_options_id": "dopt-0e126fe771d61a5e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024735e7212dc8ffe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f4990382dd622ce",
            "owner_id": "614137701308",
            "tags": {
              "Environment": "dev",
              "Name": "CloudChaser-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "CloudChaser-demo",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}